<resources>
    <string name="menu_dashboard">Home</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_substitutions">Substitutions</string>
    <string name="menu_time_table">Time table</string>
    <string name="input_widget_color_title">Color</string>
    <string name="grade_type_test">Test</string>
    <string name="grade_type_presentation">Presentation</string>
    <string name="grade_type_project">Project</string>
    <string name="grade_type_others">Others</string>
    <string name="grade_type_exam">Exam</string>
    <string name="input_widget_enum_title">Type</string>
    <string name="input_widget_weighting_title">Weighting</string>
    <string name="input_widget_weighting_others">Others</string>
    <string name="input_widget_weighting_exam">Exams</string>
    <string name="input_widget_subject_title">Subject</string>
    <string name="input_widget_subject_error_nothing_selected">You have to select a subject.</string>
    <string name="input_widget_calendar_title">Date</string>
    <string name="menu_add_item">Add</string>
    <string name="activity_create_calendar_entry_title">Calendar entry</string>
    <string name="calendar_entry_type_others">Others</string>
    <string name="calendar_entry_type_homework">Homework</string>
    <string name="calendar_entry_type_hand_in">Hand in</string>
    <string name="calendar_entry_type_test">Test</string>
    <string name="calendar_entry_type_exam">Exam</string>
    <string name="activity_create_calendar_entry_name">Title</string>
    <string name="activity_create_calendar_entry_description">Description</string>
    <string name="calendar_date_tomorrow">Tomorrow</string>
    <string name="calendar_date_today">Today</string>
    <string name="activity_create_grade_title">Grade</string>
    <string name="validation_argument_error_min_length">The %1$s should at least be %2$d characters long!</string>
    <string name="activity_create_calendar_entry_title_argument_name">title</string>
    <string name="activity_create_calendar_entry_description_argument_name">description</string>
    <string name="validation_argument_error_max_length">The %1$s can\'t be longer than %2$d characters!</string>
    <string name="validation_argument_error_non_null">Please enter a %1$s</string>
    <string name="input_widget_string_title">Class</string>
    <string name="grade_format_abitur" translatable="false">Notenpunkte (0-15)</string>
    <string name="grade_format_normal" translatable="false">Schulnoten (1-6)</string>
    <string name="activity_settings_title">Settings</string>
    <string name="fragment_dashboard_add_grade">Grade</string>
    <string name="fragment_dashboard_add">Add</string>
    <string name="fragment_dashboard_calendar_entry">Homework</string>
    <string name="activity_create_grade_error_no_subject">Please create a subject first!</string>
    <string name="fragment_dashboard_calendar_entry_title">In the next 7 days …</string>
    <string name="activity_subject_detail_grades">Grades</string>
    <string name="activity_subject_detail_calendar_entries">Homework</string>
    <string name="empty_message_grades">No grades</string>
    <string name="empty_message_subjects">No subjects</string>
    <string name="empty_message_calendar_entries">No homework</string>
    <string name="menu_subsititution_refresh">Refresh</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="input_widget_time_period_title">Period</string>
    <string name="activity_create_time_table_slot_title">Time table entry</string>
    <string name="input_widget_time_period_error_time">Start time can\'t be after end time</string>
    <string name="week_day_monday_short" translatable="false">Mo</string>
    <string name="week_day_tuesday_short">Tu</string>
    <string name="week_day_wednesday_short">We</string>
    <string name="week_day_thursday_short">Th</string>
    <string name="week_day_friday_short" translatable="false">Fr</string>
    <string name="week_day_monday">Monday</string>
    <string name="week_day_tuesday">Tuesday</string>
    <string name="week_day_wednesday">Wednesday</string>
    <string name="week_day_thursday">Thursday</string>
    <string name="week_day_friday">Friday</string>
    <string name="input_widget_week_day_title">Day</string>
    <string name="menu_subject_delete">Delete</string>
    <string name="menu_subject_edit">Edit</string>
    <string name="activity_create_subject_teacher">Teacher</string>
    <string name="activity_create_subject_name">Name</string>
    <string name="activity_create_subject_name_argument_name">name</string>
    <string name="activity_create_subject_teacher_argument_name">teacher</string>
    <string name="app_name">JAH Gymnasium</string>
    <string name="activity_create_time_table_room_hint">Room</string>
    <string name="activity_create_time_table_slot_room_argument_name">room</string>
    <string name="time_table_slot_no_room">No room</string>
    <string name="item_substitution_room">Room:</string>
    <string name="fragment_substitution_empty_message">No substitution plan</string>
    <string name="calendar_date_yesterday">Yesterday</string>
    <string name="time_table_view_placeholder" translatable="false">07:00</string>
</resources>