<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_main_bottom_navigation_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_dashboard" />
    <item
        android:id="@+id/activity_main_bottom_navigation_subjects"
        android:icon="@drawable/ic_subjects"
        android:title="@string/menu_subjects" />
    <item
        android:id="@+id/activity_main_bottom_navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/menu_calendar" />
    <item
        android:id="@+id/activity_main_bottom_navigation_time_table"
        android:icon="@drawable/ic_time_table"
        android:title="@string/menu_time_table" />
    <item
        android:id="@+id/activity_main_bottom_navigation_substitutions"
        android:icon="@drawable/ic_substitutions"
        android:title="@string/menu_substitutions" />
</menu>