<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:padding="32dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/dialog_time_table_slot_details_color"
                android:layout_width="12dp"
                android:layout_height="match_parent"
                android:background="@color/default_subject_color"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/dialog_time_table_slot_details_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_widget_time_period_title" />

                <TextView
                    android:id="@+id/dialog_time_table_slot_details_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/activity_create_subject_name" />

                <TextView
                    android:id="@+id/dialog_time_table_slot_details_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="14sp"
                    tools:text="@string/activity_create_subject_teacher" />

                <TextView
                    android:id="@+id/dialog_time_table_slot_details_room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="@string/activity_create_time_table_room_hint" />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/dialog_time_table_slot_details_edit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_edit"
                android:gravity="start|center_vertical"
                android:text="@string/context_menu_edit"
                android:textAllCaps="false"
                android:textColor="?attr/text_color_main"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/dialog_time_table_slot_details_delete"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_delete"
                android:gravity="start|center_vertical"
                android:text="@string/context_menu_delete"
                android:textAllCaps="false"
                android:textColor="?attr/text_color_main"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>